# circle-sdk-rs

./: .rumdl.toml  .typos.toml  Cargo.toml  Justfile  README.md  cliff.toml  context7.json
.codex/prompts/: pb-build.md  pb-init.md  pb-plan.md  pb-refine.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
.opencode/skills/pb-build/: SKILL.md
.opencode/skills/pb-init/: SKILL.md
.opencode/skills/pb-plan/: SKILL.md
.opencode/skills/pb-refine/: SKILL.md
crates/circle-buidl-wallets/: Cargo.toml  README.md
crates/circle-buidl-wallets/src/: client.rs  error.rs  lib.rs
crates/circle-buidl-wallets/src/models/: common.rs  mod.rs  transfer.rs  user_op.rs  wallet.rs
crates/circle-buidl-wallets/tests/: integration.rs
crates/circle-compliance/: Cargo.toml  README.md
crates/circle-compliance/src/: client.rs  error.rs  lib.rs
crates/circle-compliance/src/models/: common.rs  mod.rs  screening.rs
crates/circle-compliance/tests/: integration.rs
crates/circle-developer-controlled-wallets/: Cargo.toml  README.md
crates/circle-developer-controlled-wallets/src/: client.rs  error.rs  lib.rs
crates/circle-developer-controlled-wallets/src/models/: common.rs  mod.rs  signing.rs  token.rs  transaction.rs  wallet.rs  wallet_set.rs
crates/circle-developer-controlled-wallets/tests/: integration.rs
crates/circle-user-controlled-wallets/: Cargo.toml  README.md
crates/circle-user-controlled-wallets/src/: client.rs  error.rs  lib.rs
crates/circle-user-controlled-wallets/src/models/: auth.rs  challenge.rs  common.rs  mod.rs  signing.rs  token.rs  transaction.rs  user.rs  wallet.rs
crates/circle-user-controlled-wallets/tests/: integration.rs
docs/wallets/: buidl-wallets.yaml  compliance.yaml  developer-controlled-wallets.yaml  user-controlled-wallets.yaml
specs/2026-02-26-01-circle-rust-sdk/: design.md  tasks.md
