[package]
name = "circle-developer-controlled-wallets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust client for the Circle Web3 Services Developer-Controlled Wallets API"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/circle-developer-controlled-wallets"
readme = "README.md"
keywords = ["circle", "web3", "wallet", "blockchain", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.85"

[dependencies]
chrono = { workspace = true }
hpx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["chrono", "serde_qs", "tracing"]
